tests/invalid/types.err_exp2
This file is no longer used.
